--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+BASE_URL=https://api.mojasms.dev
+USERNAME=interviewtest@mojagate.com
+PASSWORD=6648f8c$1P1084
+WEBHOOK=https://api.mojasms.dev
+SENDER=MOJAGATE
